QA fix, comments scroll into view + align buttons + hand cursor on hover

--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -13,7 +13,7 @@
     to { transform: scale(1) rotate(360deg);}
 }
 
-.request-tile:hover {
+.request-tile:hover, .icon-for-sub-category:hover {
   cursor: pointer;
 }
 
